Added JqueryUI Touch Punch for mobile drag events

--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -20,8 +20,8 @@
                         List of equimpents' icons
                     </p>
                     <div>
-                        <img id="house_1" class="imag" src="http://sandbox.kendsnyder.com/IM/square-stripped.png">
-                        <img id="house_2" class="imag" width=32 height=32 src="http://t3.gstatic.com/images?q=tbn:ANd9GcRBYkAv40Eeaxlze2dqhayvKUeoUH6l_jYNLlsfjzJu0Uy9ucjcNA">
+                        <img id="house_1" class="imag" src="images/sensor.png">
+                        <img id="house_2" class="imag" width=32 height=32 src="images/sensor2.png">
                     </div>
 
                 </div>
