Started server-side support

--- a/views/home.twig
+++ b/views/home.twig
@@ -37,9 +37,11 @@
 {% block main %}
     <div class="row">
         <div class="col-md-12">
-            <div class="jumbotron" id="jumbotron" draggable="true">
+
+            <div id="map">
 
             </div>
+
         </div>
     </div>
 {% endblock main %}
