--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -7,10 +7,11 @@
                 <div>
                     <p>
                         List of rooms
+                    </p>
                     <div class="room" id="bedroom"></div>
                     <div class="room"></div>
                     <div class="room"></div>
-                    </p>
+
                 </div>
 
 
@@ -20,8 +21,8 @@
                         List of equimpents' icons
                     </p>
                     <div>
-                        <img id="house_1" class="imag" src="images/sensor.png">
-                        <img id="house_2" class="imag" width=32 height=32 src="images/sensor2.png">
+                        <img id="house_1" class="imag" src="images/sensor.png" alt="sensor">
+                        <img id="house_2" class="imag" width=32 height=32 src="images/sensor2.png" alt="sensor2">
                     </div>
 
                 </div>
