--- a/views/page.twig
+++ b/views/page.twig
@@ -18,7 +18,8 @@
 	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
-    <script src="js/kinetic.js"></script>
+    <script src="js/dragNdrop.js"></script>
+    <script src="js/map.js"></script>
 
     {% block links %}
     {% endblock links %}
