Ajax post to send map as JSON string to php

--- a/views/page.twig
+++ b/views/page.twig
@@ -19,7 +19,7 @@
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <script src="js/dragNdrop.js"></script>
-    <script src="js/map.js"></script>
+   <!-- <script src="js/map.js"></script> -->
 
     {% block links %}
     {% endblock links %}
