--- a/views/home.twig
+++ b/views/home.twig
@@ -37,12 +37,22 @@
 {% block main %}
     <div class="row">
         <div class="col-md-12">
-
-            <div id="map">
+            <div class="form-group">
+                <label>Select list (select one):
+                    <select class="form-control">
+                        {% for id in 0..10 %}
+                            <option>{{ id }}</option>
+                        {% endfor %}
+                    </select>
+                </label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div id="">
 
             </div>
 
         </div>
     </div>
 {% endblock main %}
-
