--- a/views/page.twig
+++ b/views/page.twig
@@ -18,8 +18,8 @@
 	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
-    <script src="js/dragNdrop.js"></script>
-   <!-- <script src="js/map.js"></script> -->
+   {# <script src="js/dragNdrop.js"></script>#}
+
 
     {% block links %}
     {% endblock links %}
@@ -57,6 +57,7 @@
     {% block main %}
 
 
+
     {% endblock main %}
 
     {% block pagefooter %}
@@ -67,5 +68,6 @@
     {% endblock pagefooter %}
 
 </div>
+<script src="js/map.js"></script>
 </body>
 </html>
