Moved some scripts around

--- a/views/page.twig
+++ b/views/page.twig
@@ -18,7 +18,7 @@
 	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
-   {# <script src="js/dragNdrop.js"></script>#}
+    {#<script src="js/dragNdrop.js"></script> #}
 
 
     {% block links %}
@@ -68,6 +68,6 @@
     {% endblock pagefooter %}
 
 </div>
-<script src="js/map.js"></script>
+{#<script src="js/map.js"></script>#}
 </body>
 </html>
