--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -22,8 +22,8 @@
                         List of equimpents' icons
                     </p>
                     <div>
-                        <img id="house_1" class="imag" src="images/sensor.png" alt="sensor">
-                        <img id="house_2" class="imag" width=32 height=32 src="images/sensor2.png" alt="sensor2">
+                        <img id="sensor0" class="imag" src="images/sensor.png" alt="sensor">
+                        <img id="sensor1" class="imag" width=32 height=32 src="images/sensor2.png" alt="sensor2">
                     </div>
 
                 </div>
