Can now load one image on redrawn stage

--- a/css/styles.less
+++ b/css/styles.less
@@ -216,7 +216,7 @@ h1 {
   background-color:ivory;
   resize: both;
 }
-.imag {
+.imageToDrag {
   width:60px;
   height:40px;
   position:relative;
