Fixed helper clone appearing behind canvas

--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -9,9 +9,9 @@
                     <p>
                         List of rooms
                     </p>
-                    <div class="room" id="bedroom"></div>
-                    <div class="room"></div>
-                    <div class="room"></div>
+                    <img id="rect" class="imageToDrag" src="images/rect.png">
+                    <img id="triangle" class="imageToDrag" src="images/triangle.png">
+                    <img id="circle" class="imageToDrag" src="images/circle.png">
 
                 </div>
 
