--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -1,12 +1,12 @@
 <script src="js/dragNdrop.js"></script>
 <div class="row">
-    <div class="col-md-2">
+    <div class="col-xs-3 col-md-2">
         <div id="accordion-resizer">
             <div id="accordion" class="wrapper">
 
-                <h3>Rooms</h3>
+                <h3 class="hide-text">Rooms</h3>
                 <div>
-                    <p>
+                    <p  class="hidden-xs">
                         List of rooms
                     </p>
                     <img id="rect" class="imageToDrag" src="images/rect.png">
@@ -16,10 +16,10 @@
                 </div>
 
 
-                <h3>Equipments</h3>
+                <h3 class="hide-text">Equipments</h3>
                 <div>
-                    <p>
-                        List of equimpents' icons
+                    <p class="hidden-xs">
+                        List of equipment' icons
                     </p>
                     <div>
                         <img id="sensor0" class="imageToDrag" src="images/sensor.png" alt="sensor">
@@ -28,17 +28,21 @@
 
                 </div>
 
-                <h3>Sensors</h3>
+                <h3 class="hide-text">Sensors</h3>
                 <div>
-                    <p>
+                    <p class="hidden-xs">
                         List of sensors' icons
                     </p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="col-md-10">
+    <div class="col-xs-9 col-md-9">
         <div id="container"></div>
+    </div>
+
+    <div class="col-xs-1 col-md-1">
+        <button type="button" class="btn btn-primary btn-lg" id="save">Save</button>
     </div>
 </div>
 
@@ -50,7 +54,7 @@
 
 
     <div class="col-md-2">
-        <button type="button" class="btn btn-primary btn-lg" id="save">Save</button>
+
     </div>
 </div>
 
