--- a/views/page.twig
+++ b/views/page.twig
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- Style Sheet Links -->
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
-    <link rel="stylesheet/less" type="text/css" href="css/styles.less">
+    <link rel="stylesheet/less" type="text/css" href="less/styles.less">
 
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
