Changeed more css for resposive size

--- a/less/styles.less
+++ b/less/styles.less
@@ -239,7 +239,7 @@ h1 {
     width: auto;
   }
 
-  div.col-xs-9 {
+  div.col-xs-8 {
     padding: 0;
     margin: 2px;
   }
@@ -254,18 +254,17 @@ h1 {
 @media (max-width: 767px) {
   div.col-xs-3 {
     padding: 5px;
-    margin: 5px;
+    margin: 0;
     width: 80px;
   }
 
-  div.col-xs-9 {
-    padding: 5px;
-    margin: 0;
-
+  div.col-xs-8 {
+    padding: 0;
+    margin: 2px;
   }
 
   div.col-xs-1 {
-    padding-left: 0;
+    margin-left:-28px;
   }
 
   #ui-accordion-accordion-panel-1{
