Added sapes to the canvas and made them draggable

--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -9,10 +9,9 @@
                     <p  class="hidden-xs">
                         List of rooms
                     </p>
-                    <img id="rect" class="imageToDrag" src="images/rect.png">
+                    <img id="rect" class="imageToDrag" src="images/rectangle.png">
                     <img id="triangle" class="imageToDrag" src="images/triangle.png">
                     <img id="circle" class="imageToDrag" src="images/circle.png">
-
                 </div>
 
 
