Loaded shapes aren't draggable

--- a/less/styles.less
+++ b/less/styles.less
@@ -203,6 +203,14 @@ h1 {
   height: 85px;
   position:relative;
 }
+#sensor0 {
+  width: 80px;
+  height: 80px;
+}
+#sensor1 {
+  width: 80px;
+  height: 80px;
+}
 .well {
   margin-bottom: 5px;
 }
