--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -22,7 +22,7 @@
                     </p>
                     <div>
                         <img id="sensor0" class="imageToDrag" src="images/sensor.png" alt="sensor">
-                        <img id="sensor1" class="imageToDrag" width=32 height=32 src="images/sensor2.png" alt="sensor2">
+                        <img id="sensor1" class="imageToDrag" src="images/sensor2.png" alt="sensor2">
                     </div>
 
                 </div>
