Fixed image loading bug

--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -21,7 +21,7 @@
                 <h3 class="hide-text">Sensors</h3>
                 <div>
                     <img id="sensor0" class="imageToDrag" src="images/sensor.png" alt="sensor">
-                    <img id="sensor1" class="imageToDrag" src="images/sensor2.png" alt="sensor2">
+                   <!-- <img id="sensor1" class="imageToDrag" src="images/sensor2.png" alt="sensor2"> -->
                 </div>
             </div>
         </div>
