Fixed drag and drop offset bug

--- a/less/styles.less
+++ b/less/styles.less
@@ -168,19 +168,20 @@ h1 {
 
 /*-------------- Build using Kinetic------------------------*/
 #container {
-  width: auto - 10;
+  width: auto;
   height:100%;
   clear: both;
+  padding-right: 20px;
+  padding-top: 10px;
 }
 
 .wrapper {
-  width: auto;
+  width: 800px;
   clear: both;
 }
 #accordion-resizer {
   width: auto;
-  height:auto;
-  margin-top:10px;
+  height: 80px;
   clear: both;
 }
 
@@ -218,7 +219,7 @@ h1 {
   width: 98px;
   height: 40px;
   padding: 0;
-  margin-left: -20px;
+  margin: 0;
 }
 
 
