--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -1,6 +1,6 @@
 <script src="js/dragNdrop.js"></script>
 <div class="row">
-    <div class="col-xs-3 col-md-2">
+    <div class="col-xs-10 col-md-10">
         <div id="accordion-resizer">
             <div id="accordion" class="wrapper">
 
@@ -11,39 +11,22 @@
                     <img id="circle" class="imageToDrag" src="images/circle.png">
                 </div>
 
-
-                <h3 class="hide-text">Equipments</h3>
-                <div>
-
-
-                </div>
-
+               {#
                 <h3 class="hide-text">Sensors</h3>
                 <div>
                     <img id="sensor0" class="imageToDrag" src="images/sensor.png" alt="sensor">
                    <!-- <img id="sensor1" class="imageToDrag" src="images/sensor2.png" alt="sensor2"> -->
-                </div>
+                </div>#}
             </div>
         </div>
     </div>
-    <div class="col-xs-8 col-md-9">
-        <div id="container"></div>
-    </div>
-
-    <div class="col-xs-1 col-md-1">
+    <div class="col-xs-2 col-md-2">
         <button type="button" class="btn btn-primary btn-lg" id="save">Save</button>
     </div>
 </div>
-
-
 <div class="row">
-    <div class="col-md-10">
-
-    </div>
-
-
-    <div class="col-md-2">
-
+    <div class="col-xs-12 col-md-12">
+        <div id="container"></div>
     </div>
 </div>
 
