--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -9,6 +9,13 @@
                     <img id="rect" class="imageToDrag" src="images/rectangle.png">
                     <img id="triangle" class="imageToDrag" src="images/triangle.png">
                     <img id="circle" class="imageToDrag" src="images/circle.png">
+                    <img id="bed" class="imageToDrag" src="images/sleeping.png">
+                    <img id="bathroom" class="imageToDrag" src="images/bathroom24.png">
+                    <img id="kitchen" class="imageToDrag" src="images/cutlery22.png">
+                    <img id="washer" class="imageToDrag" src="images/washer.png">
+                    <img id="tv" class="imageToDrag" src="images/screen54.png">
+                    <img id="sofa" class="imageToDrag" src="images/sofa12.png">
+                    <img id="door" class="imageToDrag" src="images/open129.png">
                 </div>
 
                {#
