--- a/less/styles.less
+++ b/less/styles.less
@@ -176,7 +176,7 @@ h1 {
 }
 
 .wrapper {
-  width: 800px;
+  width: 900px;
   clear: both;
 }
 #accordion-resizer {
@@ -203,6 +203,36 @@ h1 {
   width: 85px;
   height: 85px;
   position:relative;
+}
+@icon-width: 50px;
+@icon-height: 50px;
+#bed {
+  width:@icon-width;
+  height: @icon-height;
+}
+#bathroom {
+  width:@icon-width;
+  height: @icon-height;
+}
+#kitchen {
+  width:@icon-width;
+  height: @icon-height;
+}
+#washer {
+  width:@icon-width;
+  height: @icon-height;
+}
+#tv {
+  width:@icon-width;
+  height: @icon-height;
+}
+#sofa {
+  width:@icon-width;
+  height: @icon-height;
+}
+#door {
+  width:@icon-width;
+  height: @icon-height;
 }
 #sensor0 {
   width: 80px;
