--- a/less/styles.less
+++ b/less/styles.less
@@ -79,7 +79,7 @@ body {
 
 .header {
   margin-top: -20px;
-  margin-bottom: 15px;
+  margin-bottom: 5px;
   padding-left: 10px;
 }
 
@@ -203,6 +203,7 @@ h1 {
   width: 85px;
   height: 85px;
   position:relative;
+  margin-left: 10px;
 }
 @icon-width: 50px;
 @icon-height: 50px;
@@ -249,7 +250,7 @@ h1 {
   width: 98px;
   height: 40px;
   padding: 0;
-  margin: 0;
+  margin-top: 10px;
 }
 
 
