Can now add sensors to the map and load them all

--- a/less/styles.less
+++ b/less/styles.less
@@ -244,14 +244,7 @@ h1 {
   width:@icon-width;
   height: @icon-height;
 }
-#sensor0 {
-  width: 80px;
-  height: 80px;
-}
-#sensor1 {
-  width: 80px;
-  height: 80px;
-}
+
 .well {
   margin-bottom: 5px;
 }
@@ -338,6 +331,8 @@ h1 {
 
 }
 
-
-
-
+.sensor {
+  width: 65px;
+  height: 65px;
+  margin-left: 20px;
+}
