--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -28,7 +28,7 @@
         </div>
     </div>
     <div class="col-xs-2 col-md-2">
-        <button type="button" class="btn btn-primary btn-lg" id="save">Save</button>
+        <button type="button" class="btn btn-primary btn-lg" id="save" data-loading-text="Loading...">Save</button>
     </div>
 </div>
 <div class="row">
