--- a/views/page.twig
+++ b/views/page.twig
@@ -13,6 +13,7 @@
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="js/bootbox.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script src="js/jquery.ui.touch-punch.js"></script>
 	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
