Can now add name to map when creating it

--- a/less/styles.less
+++ b/less/styles.less
@@ -184,14 +184,18 @@ h1 {
 }
 
 .wrapper {
-  width: 900px;
+  width: 850px;
   clear: both;
 }
 #accordion-resizer {
   width: auto;
-  height: 80px;
+  height: 70px;
   clear: both;
   color: @secondary-text;
+}
+
+#ui-accordion-accordion-panel-0 {
+  padding: 5px;
 }
 
 #map {
@@ -261,6 +265,9 @@ h1 {
   color: @text;
 }
 
+div.form-group {
+  margin-bottom: 0;
+}
 
 /* Large desktops and laptops */
 @media (min-width: 1200px) {
