--- a/views/canvas.twig
+++ b/views/canvas.twig
@@ -1,6 +1,6 @@
 <script src="js/dragNdrop.js"></script>
 <div class="row">
-    <div class="col-xs-10 col-md-10">
+    <div class="col-xs-10 col-md-9">
         <div id="accordion-resizer">
             <div id="accordion" class="wrapper">
 
@@ -27,7 +27,13 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-2 col-md-2">
+    <div class="col-xs-2 col-md-3">
+        <form role='form' method='POST'>
+            <div class='form-group'>
+                <label for='name'>Name of your house: </label>
+                <input type='text' id='name' class='form-control' name='name' placeholder='House name here...'>
+            </div>
+            </form>
         <button type="button" class="btn btn-primary btn-lg" id="save" data-loading-text="Loading...">Save</button>
     </div>
 </div>
