--- a/views/home.twig
+++ b/views/home.twig
@@ -26,10 +26,13 @@
 
 {% block header %}
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-10">
             <div class="header">
                 <h1>Home</h1>
             </div>
+        </div>
+        <div class="col-md-2">
+            <a href="./edit.php"><button type="button" class="btn btn-primary btn-lg" id="edit" data-loading-text="Loading...">Edit</button></a>
         </div>
     </div>
 {% endblock header %}
