Added styles for graphs points and lines

--- a/less/styles.less
+++ b/less/styles.less
@@ -227,30 +227,37 @@ h1 {
 #bed {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #bathroom {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #kitchen {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #washer {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #tv {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #sofa {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 #door {
   width:@icon-width;
   height: @icon-height;
+  z-index: 15;
 }
 
 .well {
@@ -367,4 +374,33 @@ div.form-group {
 .jumbotron {
   padding: 10px;
   margin: 10px;
+}
+
+/********************************** VIS Graph Styles ************************************************/
+.customStyle1 {
+  fill: @brand-primary;
+  fill-opacity:0;
+  stroke-width:2px;
+  stroke: @brand-info;
+}
+
+.customStyle2 {
+  fill: @brand-warning;
+  fill-opacity:0;
+  stroke-width:2px;
+  stroke: @brand-warning;
+}
+
+.customStyle3 {
+  fill: @brand-danger;
+  fill-opacity:0;
+  stroke-width:2px;
+  stroke: @brand-danger;
+}
+
+.customStyle4 {
+  fill: @accent;
+  fill-opacity:0;
+  stroke-width:2px;
+  stroke: @accent;
 }
