--- a/views/home.twig
+++ b/views/home.twig
@@ -48,6 +48,6 @@
         </div>
     </div>
     <script src="js/map.js"></script>
-    {% include 'flot.twig' %}
+    {% include 'vis.twig' %}
 
 {% endblock main %}
