Each sensor retrieves to correct sensor data from the db

--- a/views/home.twig
+++ b/views/home.twig
@@ -47,7 +47,9 @@
             </div>
         </div>
     </div>
+    <button id="btn1" name="sensor" type="submit" value="notSet"></button>
+    <button id="btn2" name="type" type="submit" value="notSet"></button>
     <script src="js/map.js"></script>
     {% include 'vis.twig' %}
-
+    <button id="fetch" name="fetch" onclick="fetch()"></button>
 {% endblock main %}
