--- a/views/vis.twig
+++ b/views/vis.twig
@@ -51,7 +51,7 @@
                 style: 'square' // square, circle
             },
             shaded: {
-                orientation: 'bottom' // top, bottom
+                orientation: 'top' // top, bottom
             }
         }});
 
@@ -64,7 +64,7 @@
             style: 'circle' // square, circle
         },
             shaded: {
-                orientation: 'top' // top, bottom
+                orientation: 'bottom' // top, bottom
             }}
     });
 
@@ -73,11 +73,7 @@
         content: names[2],
         className: 'customStyle2',
         options: {
-            style: 'bar',
-            drawPoints: {
-                style: 'circle',
-                size: 10
-            }
+            style: 'line'
         }
     });
 
@@ -93,19 +89,18 @@
         }
     });
 
-    groups3.add({
+/*    groups3.add({
         id: 1,
         content: names[3],
         className: 'customStyle2',
         options: {
-            style: 'bar',
-            drawPoints: {
+           drawPoints: {
                 style: 'circle',
                 size: 10
             }
         }
     });
-
+*/
 
     var container = document.getElementById('visualization');
     var container2 = document.getElementById('visualization2');
@@ -152,7 +147,7 @@
                 ]);
                 dataset3.add([
                     {x: dateTime, y: (movement/10), group: 0},
-                    {x: dateTime, y: (movement/10), group: 1}
+//                    {x: dateTime, y: (movement/10), group: 1}
                 ]);
             }
         }
@@ -167,8 +162,8 @@
         height: '500px',
         defaultGroup: 'ungrouped',
         legend: true,
-        start: '2015-03-05',
-        end: '2015-03-15',
+        start: '2015-03-16',
+        end: '2015-03-19',
         sampling: 'true',
         dataAxis:{
             customRange:{
@@ -184,14 +179,14 @@
     var options2 = {
         height: '500px',
         legend: true,
-        start: '2015-03-05',
-        end: '2015-03-15',
+        start: '2015-03-16',
+        end: '2015-03-19',
         sampling: true,
         dataAxis:{
             customRange:{
                 left:{
                     min: '-10',
-                    max: '500'
+                    max: '200'
                 }
             }
         }
@@ -201,8 +196,8 @@
     var options3 = {
         height: '500px',
         legend: true,
-        start: '2015-03-05',
-        end: '2015-03-15',
+        start: '2015-03-16',
+        end: '2015-03-19',
         sort: false,
         sampling: false,
         style: 'points'
