--- a/views/page.twig
+++ b/views/page.twig
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script src="js/jquery.ui.touch-punch.js"></script>
 	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
+    <script src="js/moment.js"></script>
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     {#<script src="js/dragNdrop.js"></script> #}
