Differentiated PIR Energy with relation to time in the graph

--- a/less/styles.less
+++ b/less/styles.less
@@ -378,10 +378,10 @@ div.form-group {
 
 /********************************** VIS Graph Styles ************************************************/
 .customStyle1 {
-  fill: @brand-primary;
+  fill: @brand-info;
   fill-opacity:0;
   stroke-width:2px;
-  stroke: @brand-info;
+  stroke: @brand-primary;
 }
 
 .customStyle2 {
