--- a/views/vis.twig
+++ b/views/vis.twig
@@ -108,9 +108,9 @@
 
 
 function fetch(){
-    console.log(dataset.length);
     dataset.clear();
-    console.log(dataset.length);
+    dataset2.clear();
+    dataset3.clear();
     var sensor = document.getElementById("btn1").value;
     var type = document.getElementById("btn2").value;
     console.log( sensor + " " + type);
@@ -144,11 +144,11 @@ function fetch(){
 
             var thisTime = new Date(packets[i]['date'] + " " + time);
             var lastTime = new Date(packets[i+1]['date'] + " " + packets[i+1]['time']);
-            //console.log("Current: " +thisTime + " Last: " + lastTime + " Diff: " + (thisTime-lastTime)/1000);
+            console.log("Current: " +thisTime + " Last: " + lastTime + " Diff: " + (thisTime-lastTime)/1000);
 
             var thisEnergy = packets[i]['pi_renergy'];
             var lastEnergy = packets[i+1]['pi_renergy'];
-            //console.log("Current eng: " + thisEnergy + " Last eng: " + lastEnergy);
+            console.log("Current eng: " + thisEnergy + " Last eng: " + lastEnergy);
 
             var energyDiff = (thisEnergy - lastEnergy)/(thisTime-lastTime);
 
