--- a/views/page.twig
+++ b/views/page.twig
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.9.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="less/nprogress.css">
     <link rel="stylesheet/less" type="text/css" href="less/styles.less">
 
     <!-- Scripts -->
@@ -17,12 +18,10 @@
     <script src="js/bootbox.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
     <script src="js/jquery.ui.touch-punch.js"></script>
-	<!-- <script src="js/kinetic-v5.0.2.min.js" type="text/javascript"></script> -->
     <script src="js/moment.js"></script>
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
-    {#<script src="js/dragNdrop.js"></script> #}
-
+    <script src="js/nprogress.js"></script>
 
     {% block links %}
     {% endblock links %}
@@ -40,16 +39,13 @@
 <div class="container" id ="content">
     {% block navigation %}
         <div class="row">
-
                 {% include 'navbar.twig' %}
-
         </div>
     {% endblock navigation %}
 
 
     {% block pageheader %}
         <header class="row">
-
             <div class="col-md-12">
                 {% block header %}
                 {% endblock header %}
@@ -59,13 +55,10 @@
 
     {% block main %}
 
-
-
     {% endblock main %}
 
     {% block pagefooter %}
         {% block footer %}
-
             {#{% include'footer.twig' %}#}
         {% endblock footer %}
     {% endblock pagefooter %}
