--- a/views/page.twig
+++ b/views/page.twig
@@ -22,6 +22,7 @@
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <script src="js/nprogress.js"></script>
+    <script src="js/googleAnalytics.js"></script>
 
     {% block links %}
     {% endblock links %}
