--- a/views/navbar.twig
+++ b/views/navbar.twig
@@ -7,12 +7,12 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">BuildAX</a>
+                    <a class="navbar-brand" href="/Drag-and-drop/">BuildAX</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/BuildAX">Home <span class="glyphicon glyphicon-home"></span></a></li>
+                        <li><a href="/Drag-and-drop/">Home <span class="glyphicon glyphicon-home"></span></a></li>
                         <li><a href="#">Help <span class="glyphicon glyphicon-info-sign"></span></a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings <span class="glyphicon glyphicon-cog"></span><span class="caret"></span></a>
