--- a/views/page.twig
+++ b/views/page.twig
@@ -22,7 +22,6 @@
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <script src="js/nprogress.js"></script>
-    <script src="js/googleAnalytics.js"></script>
 
     {% block links %}
     {% endblock links %}
@@ -37,6 +36,7 @@
 </head>
 
 <body lang="en-GB">
+<?php include_once("analyticstracking.php") ?>
 <div class="container" id ="content">
     {% block navigation %}
         <div class="row">
