--- a/views/page.twig
+++ b/views/page.twig
@@ -22,6 +22,16 @@
     <script src="js/konva.js"></script>
     <script src="js/less.min.js" type="text/javascript"></script>
     <script src="js/nprogress.js"></script>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-61088988-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 
     {% block links %}
     {% endblock links %}
@@ -36,7 +46,6 @@
 </head>
 
 <body lang="en-GB">
-<?php include_once("analyticstracking.php") ?>
 <div class="container" id ="content">
     {% block navigation %}
         <div class="row">
